PA_Education/TestMenifest/force-app/main/default/objects/ProcessProductDetail__c/ProcessProductDetail__c.object-meta.xml
<CustomObject>
    <label>생산공정상세</label>
    <nameField>
        <displayFormat>PPD-{000000}</displayFormat>
        <label>생산공정상세코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>