PA_Education/TestMenifest/force-app/main/default/objects/ProcessProductDetail__c/fields/CntError__c.field-meta.xml
<CustomField>
    <fullName>CntError__c</fullName>
    <description>생산공장완료시 트리거를 통해 집계됨</description>
    <label>에러수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>