PA_Education/TestMenifest/force-app/main/default/objects/ProcessProductDetail__c/fields/CntTotalUsed__c.field-meta.xml
<CustomField>
    <fullName>CntTotalUsed__c</fullName>
    <formula>CntUsed__c +  CntError__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>총 사용수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>