PA_Education/TestMenifest/force-app/main/default/objects/ProcessProductDetail__c/fields/CntUsedForProcess__c.field-meta.xml
<CustomField>
    <fullName>CntUsedForProcess__c</fullName>
    <description>생산공장완료시 트리거를 통해 집계됨</description>
    <label>공정별 소모갯수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>