PA_Education/TestMenifest/force-app/main/default/objects/ProcessProductDetail__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <label>재고</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>생산공정상세</relationshipLabel>
    <relationshipName>ProcessProductDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>