PA_Education/TestMenifest/force-app/main/default/objects/ProcessProductDetail__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <formula>ProcessInfoDetail__r.Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>품목</label>
    <type>Text</type>
</CustomField>