PA_Education/TestMenifest/force-app/main/default/objects/ProcessProductDetail__c/fields/ProcessInfoDetail__c.field-meta.xml
<CustomField>
    <fullName>ProcessInfoDetail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>공정상세정보</label>
    <referenceTo>ProcessInfoDetail__c</referenceTo>
    <relationshipLabel>생산공정상세</relationshipLabel>
    <relationshipName>ProcessProductDetail</relationshipName>
    <type>Lookup</type>
</CustomField>