PA_Education/TestMenifest/force-app/main/default/objects/ProcessProductDetail__c/fields/ProcessProduct__c.field-meta.xml
<CustomField>
    <fullName>ProcessProduct__c</fullName>
    <label>생산공정</label>
    <referenceTo>ProcessProduct__c</referenceTo>
    <relationshipLabel>생산공정상세</relationshipLabel>
    <relationshipName>ProcessProductDetail</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>