PA_Education/TestMenifest/force-app/main/default/objects/ProcessProductDetail__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <formula>ProcessInfoDetail__r.Seq__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>공정상세순서</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>