PA_Education/TestMenifest/force-app/main/default/objects/ProcessProductDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProcessProduct__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
    <language>ko</language>
</ListView>